# phantomtest

./: .gitignore  IOasyncExample.py  IOasyncInteractive.py  README.md  capture_filename.py  config.yml  list_devices.py  pyproject.toml  readme.md  requirements.txt  test_ai_all.py  test_ao_random.py  test_daqs.py  test_device_names.py  test_nidaqmx_devices.py
configs/: OstreamTimeformat.yml  ai_writer.yml  ao_writer.yml  config_test.yml  daqI_output.yml  daqO_output.yml
daq/: __init__.py  daqI.py  daqO.py  utils.py
daqio/: __init__.py  ai_reader.py  ao_runner.py  config.py  daqI.py  daqO.py  publisher.py
phantomtest/: __init__.py
scripts/: run_waveform_and_pico_capture.py
tests/: test_ai_reader_read_once.py  test_capture_filename.py  test_daqo_config.py  test_daqs.py  test_device_names.py  test_nidaqmx_devices.py  test_publisher_ai.py  test_waveform_io.py
tests/daqio/: apressure.csv
