[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "daqio"
version = "0.1.0"
description = "Utilities for NI-DAQmx analog input and output"
authors = [{name = "Phantom"}]
requires-python = ">=3.8"
dependencies = ["nidaqmx", "pyyaml"]

[tool.setuptools.packages.find]
include = ["daqio"]
