[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "daqio"
version = "0.1.0"
description = "Utilities for NI-DAQmx analog input and output"
authors = [{name = "Phantom"}]
requires-python = ">=3.8"
dependencies = ["nidaqmx", "pyyaml"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
list-devices = "list_devices:main"

[tool.setuptools]
py-modules = ["list_devices"]

[tool.setuptools.packages.find]
include = ["daqio"]
